<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/register_block_shipping"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_shipping_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_shipping_name"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />


    <EditText
        android:id="@+id/et_shipping_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_shipping_surname"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />


    <EditText
        android:id="@+id/et_shipping_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_shipping_address"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />


    <EditText
        android:id="@+id/et_shipping_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_shipping_city"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />


    <EditText
        android:id="@+id/et_shipping_postal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_shipping_postal"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />


    <EditText
        android:id="@+id/et_shipping_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_shipping_country"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />

    <EditText
        android:id="@+id/et_shipping_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_shipping_phone"
        android:inputType="phone"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />
</LinearLayout>
