<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/register_block_main"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_refer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_info_main_refer"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:nextFocusDown="@+id/et_main_name"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_info_main_name"
            app:theme="@style/AppTheme.TextInputLayout.Primary">

            <EditText
                android:id="@+id/et_main_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textCapWords"
                android:lines="1"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_main_surname"
                android:textColor="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_info_main_surname"
            app:theme="@style/AppTheme.TextInputLayout.Primary">

            <EditText
                android:id="@+id/et_main_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textCapWords"
                android:textColor="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_main_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_main_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />

    <EditText
        android:id="@+id/et_main_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_main_phone"
        android:inputType="phone"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/register_info_main_username"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:nextFocusDown="@+id/et_password"
        android:textColor="@color/colorTextPrimary"
        android:theme="@style/AppTheme.EditTextStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_info_main_password"
            app:theme="@style/AppTheme.TextInputLayout.Primary">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_password_repeat"
                android:textColor="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_info_main_password_repeat"
            app:theme="@style/AppTheme.TextInputLayout.Primary">

            <EditText
                android:id="@+id/et_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/colorTextPrimary" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>
