<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_launch_container_btn_margin_top"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/first_launch_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/first_launch_btn_margin_right"
            android:background="@drawable/btn_cornered_primary_24dp"
            android:text="@string/first_launch_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/first_launch_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/first_launch_btn_margin_left"
            android:background="@drawable/btn_cornered_accent_24dp"
            android:text="@string/first_launch_register"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_launch_forgot_passwd_margin_top"
        android:text="@string/first_launch_forgot_password"
        android:textColor="@color/colorTextPrimary" />
</LinearLayout>
