<?xml version="1.0" encoding="utf-8"?><!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_fields_margin_top"
                android:hint="@string/login_hint_username"
                app:theme="@style/AppTheme.TextInputLayout.Primary">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:nextFocusDown="@+id/et_password"
                    android:theme="@style/AppTheme.EditTextStyle" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_fields_margin"
                android:hint="@string/login_hint_password"
                app:theme="@style/AppTheme.TextInputLayout.Primary">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/first_launch_btn_width"
                android:layout_height="@dimen/first_launch_btn_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_btn_margin_top"
                android:background="@drawable/btn_primary"
                android:text="@string/login_btn_login"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="invisible" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPaddingBottom="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"
                android:theme="@style/AppTheme.TextInputLayout.Primary"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.ErrorTextAppearance">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/et_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_username"
                android:hint="@string/login_hint_password"
                android:theme="@style/AppTheme.TextInputLayout.Primary"
                app:errorTextAppearance="@style/AppTheme.TextInputLayout.ErrorTextAppearance">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_anchor="@+id/card_view"
        app:layout_anchorGravity="bottom|center_horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_cornered_accent_24dp"
            android:text="@string/login_btn_login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>